Added new admin routes for assigining classes and subjects to teachers
